fix: theme switcher appears behind searchbar

--- a/themes/bloodywood/assets/css/partials/theme-switcher-menu.scss
+++ b/themes/bloodywood/assets/css/partials/theme-switcher-menu.scss
@@ -18,6 +18,7 @@ html[data-theme='dark'] {
 
 .theme-switcher-menu {
 	position: relative;
+	z-index: 1;
 
 	.hidden {
 		display: none;
